# DexApplication

./: README.MD
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dexapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/Android/: Extra.cpp  Extra.h  commUtils.cpp  commUtils.h
app/src/main/cpp/Android/libdex/: CmdUtils.cpp  CmdUtils.h  DexCatch.cpp  DexCatch.h  DexClass.cpp  DexClass.h  DexDataMap.cpp  DexDataMap.h  DexDebugInfo.cpp  DexDebugInfo.h  DexFile.h  DexOptData.cpp  DexSwapVerify.cpp  JNIHelp.h  OptInvocation.cpp  ZipArchive.cpp
app/src/main/cpp/Android/vm/: Common.h  Dalvik.h  DvmDex.cpp  DvmDex.h  LinearAlloc.cpp  LinearAlloc.h
app/src/main/cpp/Android/vm/oo/: Class.cpp  Class.h  Object.cpp  Object.h  Resolve.cpp
app/src/main/cpp/mandroid/: CommUtils.cpp  CommUtils.h  Dalvik.h  MDalvik.cpp  MDalvik.h  mlog.h  myjni.cpp
app/src/main/java/com/dexapplication/: MainActivity.java  MyApplication.java  Test.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dexapplication/: ExampleUnitTest.java
doc/: record.txt
gradle/wrapper/: gradle-wrapper.properties
